--- a/_page_06.scss
+++ b/_page_06.scss
@@ -11,7 +11,7 @@
         top: 50%;
         width: 3.5%;
         height: 27%;
-        background-color:rgb(154, 33, 241);
+        background-color:#3787C8;
         border-radius: 50%;
       }
     }
