--- a/_page_03.scss
+++ b/_page_03.scss
@@ -1,6 +1,6 @@
 
 .page_03{
-    background-color: rgba(103, 102, 100, 0.752);
+    background-color: #555F64;
     width: 100%;
     height: 100%;
     margin: 0;
@@ -11,9 +11,9 @@
       height: 100%;
      }
      .heading_01{
-         background-color: rgb(233, 123, 6);
-        width: 200px;
-        height: 200px;
+         background-color: #E14B32;
+        width: 100px;
+        height: 100px;
         border-radius: 50%;
         position: relative;
         left: 9%;
@@ -25,17 +25,19 @@
          height: 100px;
          position: relative;
          left: 5%;
-         top: 105px;
+         top:70px;
      }
      
      .heading_03{
+        font-size: 30px;
          opacity: 2;
          text-shadow: 0px 1px 1px white;
          color: rgb(70, 84, 86);
          width: 80%;
          height: 100px;
          position: relative;
-         left: 14%;
+         
+         left: 11%;
      }
      .section_02{
         display: flex;
@@ -50,14 +52,15 @@
      .img_class_01{
          position: relative;
          height: 10%;
-         width: 100%;
+         margin-left:12%;
+         width: 80%;
          border-radius: 10px;
      }
      .para_class{
          position: relative;
          margin-left: 50px;
-         margin-right: 50px;
-         width: 100%;
+         margin-right: 70px;
+         width: 80%;
          height: auto;
          text-align: center;
          overflow-wrap: break-word;
