--- a/_page_04.scss
+++ b/_page_04.scss
@@ -1,20 +1,21 @@
 .page_04{
+   font-family: sans-serif;
     width: 100%;
     height: 100vh;
     padding: 0;
     margin: 0;
     overflow: hidden;
-    background-color: black;
+    background-color:#232526;
     .heading_01{  
-      background-color: orangered;
-      width:150px;
-      height:150px;
+      background-color:#E14B32;
+      width:100px;
+      height:100px;
       border-radius: 50%;
       position: relative;
       left: 20%;
       margin-top: 1%;
       span{
-       
+        width:40%;
         font-size:30px;
         color: white;
         position: relative;
@@ -23,17 +24,17 @@
       }
       h1{
      
-        font-size:50px;
+        font-size:40px;
         color: white;
         position: relative;
-        top:10%;
+        top:6%;
         left: 60%;
        
       }
     }
     
     .input_box_01{
-        margin-top: 6%;
+        margin-top: 2%;
         margin-bottom: 1%;
         width: 100%;
         height: 100%;
@@ -41,7 +42,7 @@
         display: flex;
         input{
           color: white;
-          background-color: black;
+          background-color: #232526;
           border: 0.1px rgb(122, 122, 122) solid;
             text-align: center;
             height:35px;
@@ -56,9 +57,9 @@
         display:grid;
         input{
           text-align: center;
-             background-color: black;
+             background-color: #232526;
             border: 0.1px rgb(122, 122, 122) solid;
-            margin-top: 1%;
+            margin-top: 5%;
             position: relative;
             margin-left: 20.8%;
             margin-right:21.3%;
@@ -70,7 +71,7 @@
           opacity: 2;
           height: 200px;
           border: 1px white dotted;
-          background-color: black;
+          background-color:#232526;
         }
     }
     .btn{
@@ -80,7 +81,7 @@
       height: 40px;
       position: relative;
       left: 67%;
-      background-color: black;
+      background-color: #232526;
       color: white;
     }
   }
