--- a/_page_05.scss
+++ b/_page_05.scss
@@ -1,5 +1,6 @@
 .page_05{
-    background-color: rgba(168, 200, 200, 0.722);
+    font-family: sans-serif;
+    background-color:#EBF0F0;
     height: 100vh;
     width: 100%;
     .header{
@@ -7,20 +8,26 @@
        height:40%;
        display:grid;
        div{
-        background-color: rgb(21, 89, 225);
+        background-color:#3787C8;
          position: relative;
          top: 20%;
          left: 10%;
-         width:150px;
-         height:150px;
+         width:100px;
+         height:100px;
          border-radius: 50%;
        }
-      h1{
+      .header__01{color:black; 
         position: relative;
-        bottom: 100%;
+        bottom: 78%;
         left: 13%; 
       } 
-  
+      .header__02{color: rgba(255, 255, 255, 0); 
+        -webkit-text-stroke-width: 1px;
+        -webkit-text-stroke-color: rgb(57, 55, 55);
+        position: relative;
+        bottom:120%;
+        left: 13%; 
+      } 
     }
     .content{
       width: 100%;
@@ -39,6 +46,22 @@
         height: 100%;
         width: 60%;
         padding: 2%;
+      }
+      span{
+        position: relative;
+        bottom: 60%;
+        left: 2%;
+      }
+      hr{
+        color: rgb(244, 76, 15);
+        width: 60px;
+        position: relative;
+        bottom: 66%;
+        right: 26%;
+      }
+      h2{
+        position: relative;
+        left: 2%;
       }
     }
     }
