--- a/_page_07.scss
+++ b/_page_07.scss
@@ -4,7 +4,7 @@
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: aqua;
+    background-color: #EBF0F0;
     .header{
       width: 100%;
       height: 50%;
@@ -27,19 +27,19 @@
      }
      .content_01{
        div{
-        width: 18%;
-        height: 40%;
+        width: 100px;
+        height: 100px;
         border-radius: 50%;
         position: relative;
         top: 15%;
         left: 20%;
-        background-color: orange;
+        background-color:#FAAF41;
        }
        h1{
         position: relative;
-        left: 28%;
+        left: 26%;
         font-family: sans-serif;
-        font-size: 40px;
+        font-size: 35px;
        }
      }  
       .content_02{
