--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 .page_01 {
-  opacity: 0.9;
   width: 100%;
   height: 100%;
-  background-color: black;
+  background-color: #1D1B1C;
 }
 .page_01 .header {
   display: flex;
@@ -18,9 +17,10 @@
   width: 50%;
   height: 100%;
   position: relative;
-  left: 55%;
+  left: 90%;
   top: 10%;
-  transform: rotate(350deg);
+  margin: 5%;
+  transform: rotate(340deg);
 }
 .page_01 .header div .h3_01 {
   font-size: 15px;
@@ -28,6 +28,7 @@
   position: relative;
   left: 80%;
   top: 15%;
+  margin: 5%;
   color: white;
 }
 .page_01 .header div .h3_02 {
@@ -36,6 +37,7 @@
   position: relative;
   left: 45%;
   top: 15%;
+  margin: 5%;
   color: white;
 }
 .page_01 .header div .h3_03 {
@@ -43,6 +45,7 @@
   font-family: sans-serif;
   position: relative;
   top: 15%;
+  margin: 5%;
   color: white;
 }
 .page_01 .header div .h3_04 {
@@ -51,27 +54,35 @@
   position: relative;
   right: 40%;
   top: 15%;
+  margin: 5%;
   color: white;
 }
 .page_01 .header div .h3_05 {
   font-size: 15px;
   font-family: sans-serif;
   position: relative;
-  top: 15%;
-  right: 25%;
-  color: white;
+  margin-left: 5%;
+  margin-right: 5%;
+  color: rgba(242, 77, 12, 0.773);
+}
+.page_01 .header div hr {
+  color: rgba(242, 77, 12, 0.773);
+  width: 30%;
+  position: relative;
+  top: 35%;
+  right: 33%;
+  margin: 5%;
 }
 .page_01 .content {
   width: 100%;
   height: 50%;
   text-align: center;
-  font-family: sans-serif;
-  letter-spacing: -10px;
+  font-family: Bebas Neue;
 }
 .page_01 .content h1 {
   font-size: 200px;
   position: relative;
-  right: 20%;
+  right: 17%;
   bottom: 40px;
   color: white;
 }
@@ -79,7 +90,7 @@
   letter-spacing: normal;
   position: relative;
   bottom: 200px;
-  right: 35%;
+  right: 10%;
   color: white;
 }
 .page_01 .footer {
@@ -90,107 +101,60 @@
   height: 100%;
   width: 50%;
   position: relative;
-  left: 5%;
+  left: 18%;
   bottom: 60%;
   color: white;
+  font-family: sans-serif;
+  font-size: 20px;
 }
 .page_01 .footer .footer_02 {
   height: 100%;
   width: 50%;
   color: white;
   position: relative;
+  left: 10%;
   bottom: 50%;
 }
-.page_01 .footer .footer_02 div {
+.page_01 .footer .footer_02 .footer__02__01 {
+  font-family: sans-serif;
   background-image: linear-gradient(to right, rgb(0, 153, 255), rgb(255, 94, 0));
-  width: 19%;
-  height: 54%;
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
 }
-.page_01 .footer .footer_02 div h5 {
+.page_01 .footer .footer_02 .footer__02__01 h5 {
   position: relative;
   top: 30%;
   left: 20%;
-  width: 150%;
+  width: 300%;
+}
+.page_01 .footer .footer_02 .footer__02__02 {
+  width: 30px;
+  height: 30px;
+  position: relative;
+  right: 69%;
+  background-color: #DF4E31;
+  text-align: center;
+}
+.page_01 .footer .footer_02 .footer__02__02 div {
+  width: 20px;
+  height: 2px;
+  position: relative;
+  top: 45%;
+  left: 15%;
+  rotate: 135deg;
+  background-color: white;
 }
 
 .page_02 {
   width: 100%;
   height: 100vh;
-  background-color: rgb(206, 210, 210);
+  background-color: #EBF0F0;
   opacity: 0.9;
-}
-.page_02 .inner_part {
-  display: flex;
-  border: 0.3px black solid;
-  position: relative;
-  width: 100%;
-  height: 50%;
-}
-.page_02 .inner_part div {
-  width: 17%;
-  border: 1px black solid;
-  display: grid;
-}
-.page_02 .inner_part div a {
-  position: relative;
-  top: 30%;
-  text-align: center;
-  font-size: 20px;
-  opacity: 0.8;
-  font-family: sans-serif;
-}
-.page_02 .inner_part div h2 {
-  text-align: center;
-  text-align: center;
-  font-size: 30px;
-  font-family: sans-serif;
-}
-.page_02 .inner_part h3 {
-  font-family: sans-serif;
-  text-align: center;
-  font-size: 20px;
-  opacity: 0.4;
-}
-.page_02 .h3 {
-  background-color: rgba(57, 120, 228, 0.862);
-  left: 3%;
-  border: 1px black solid;
-  height: 23%;
-  width: 10%;
-  border-radius: 50%;
-}
-.page_02 .heading_class_00 {
-  opacity: 1;
-  background-color: blueviolet;
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  position: relative;
-  top: 60%;
-  left: 40%;
-  text-align: center;
-}
-.page_02 .heading_class_01 {
-  font-size: 40px;
-  color: black;
-  position: relative;
-  left: 60%;
-  font-family: sans-serif;
-}
-.page_02 .heading_class_02 {
-  font-size: 40px;
-  position: relative;
-  bottom: 40%;
-  left: 58%;
-  color: white;
-  -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: black;
-  font-family: sans-serif;
 }
 
 .page_03 {
-  background-color: rgba(103, 102, 100, 0.752);
+  background-color: #555F64;
   width: 100%;
   height: 100%;
   margin: 0;
@@ -202,9 +166,9 @@
   height: 100%;
 }
 .page_03 .heading_01 {
-  background-color: rgb(233, 123, 6);
-  width: 200px;
-  height: 200px;
+  background-color: #E14B32;
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
   position: relative;
   left: 9%;
@@ -216,16 +180,17 @@
   height: 100px;
   position: relative;
   left: 5%;
-  top: 105px;
+  top: 70px;
 }
 .page_03 .heading_03 {
+  font-size: 30px;
   opacity: 2;
   text-shadow: 0px 1px 1px white;
   color: rgb(70, 84, 86);
   width: 80%;
   height: 100px;
   position: relative;
-  left: 14%;
+  left: 11%;
 }
 .page_03 .section_02 {
   display: flex;
@@ -240,14 +205,15 @@
 .page_03 .img_class_01 {
   position: relative;
   height: 10%;
-  width: 100%;
+  margin-left: 12%;
+  width: 80%;
   border-radius: 10px;
 }
 .page_03 .para_class {
   position: relative;
   margin-left: 50px;
-  margin-right: 50px;
-  width: 100%;
+  margin-right: 70px;
+  width: 80%;
   height: auto;
   text-align: center;
   overflow-wrap: break-word;
@@ -260,23 +226,25 @@
 }
 
 .page_04 {
+  font-family: sans-serif;
   width: 100%;
   height: 100vh;
   padding: 0;
   margin: 0;
   overflow: hidden;
-  background-color: black;
+  background-color: #232526;
 }
 .page_04 .heading_01 {
-  background-color: orangered;
-  width: 150px;
-  height: 150px;
+  background-color: #E14B32;
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
   position: relative;
   left: 20%;
   margin-top: 1%;
 }
 .page_04 .heading_01 span {
+  width: 40%;
   font-size: 30px;
   color: white;
   position: relative;
@@ -284,14 +252,14 @@
   top: 15%;
 }
 .page_04 .heading_01 h1 {
-  font-size: 50px;
+  font-size: 40px;
   color: white;
   position: relative;
-  top: 10%;
+  top: 6%;
   left: 60%;
 }
 .page_04 .input_box_01 {
-  margin-top: 6%;
+  margin-top: 2%;
   margin-bottom: 1%;
   width: 100%;
   height: 100%;
@@ -300,7 +268,7 @@
 }
 .page_04 .input_box_01 input {
   color: white;
-  background-color: black;
+  background-color: #232526;
   border: 0.1px rgb(122, 122, 122) solid;
   text-align: center;
   height: 35px;
@@ -315,9 +283,9 @@
 }
 .page_04 .input_box_02 input {
   text-align: center;
-  background-color: black;
+  background-color: #232526;
   border: 0.1px rgb(122, 122, 122) solid;
-  margin-top: 1%;
+  margin-top: 5%;
   position: relative;
   margin-left: 20.8%;
   margin-right: 21.3%;
@@ -329,7 +297,7 @@
   opacity: 2;
   height: 200px;
   border: 1px white dotted;
-  background-color: black;
+  background-color: #232526;
 }
 .page_04 .btn {
   border: 2px rgb(122, 122, 122) solid;
@@ -338,12 +306,13 @@
   height: 40px;
   position: relative;
   left: 67%;
-  background-color: black;
+  background-color: #232526;
   color: white;
 }
 
 .page_05 {
-  background-color: rgba(168, 200, 200, 0.722);
+  font-family: sans-serif;
+  background-color: #EBF0F0;
   height: 100vh;
   width: 100%;
 }
@@ -353,17 +322,26 @@
   display: grid;
 }
 .page_05 .header div {
-  background-color: rgb(21, 89, 225);
+  background-color: #3787C8;
   position: relative;
   top: 20%;
   left: 10%;
-  width: 150px;
-  height: 150px;
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
 }
-.page_05 .header h1 {
+.page_05 .header .header__01 {
+  color: black;
   position: relative;
-  bottom: 100%;
+  bottom: 78%;
+  left: 13%;
+}
+.page_05 .header .header__02 {
+  color: rgba(255, 255, 255, 0);
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: rgb(57, 55, 55);
+  position: relative;
+  bottom: 120%;
   left: 13%;
 }
 .page_05 .content {
@@ -386,6 +364,22 @@
   height: 100%;
   width: 60%;
   padding: 2%;
+}
+.page_05 .content div span {
+  position: relative;
+  bottom: 60%;
+  left: 2%;
+}
+.page_05 .content div hr {
+  color: rgb(244, 76, 15);
+  width: 60px;
+  position: relative;
+  bottom: 66%;
+  right: 26%;
+}
+.page_05 .content div h2 {
+  position: relative;
+  left: 2%;
 }
 .page_05 .footer {
   width: 100%;
@@ -416,7 +410,7 @@
   top: 50%;
   width: 3.5%;
   height: 27%;
-  background-color: rgb(154, 33, 241);
+  background-color: #3787C8;
   border-radius: 50%;
 }
 .page_06 .content {
@@ -452,7 +446,7 @@
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: aqua;
+  background-color: #EBF0F0;
 }
 .page_07 .header {
   width: 100%;
@@ -476,19 +470,19 @@
   height: 100%;
 }
 .page_07 .content .content_01 div {
-  width: 18%;
-  height: 40%;
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
   position: relative;
   top: 15%;
   left: 20%;
-  background-color: orange;
+  background-color: #FAAF41;
 }
 .page_07 .content .content_01 h1 {
   position: relative;
-  left: 28%;
+  left: 26%;
   font-family: sans-serif;
-  font-size: 40px;
+  font-size: 35px;
 }
 .page_07 .content .content_02 {
   font-family: sans-serif;
