--- a/_page_01.scss
+++ b/_page_01.scss
@@ -1,6 +1,5 @@
 .page_01{
     width: 100%;
-    height: 100%;
     background-color:#1D1B1C;
     .header{
       display: flex;
@@ -101,18 +100,19 @@
         width: 50%;
         position: relative;
         left: 18%;
-        bottom: 60%;
+        bottom:200px;
         color: white;
         font-family: sans-serif;
         font-size: 20px;
       }
       .footer_02{
+        font-family: Bebas Neue;
         height: 100%;
         width: 50%;
         color: white;
         position: relative;
-        left: 10%;
-        bottom: 50%;
+        left: 20%;
+        bottom:200px;
         .footer__02__01{
           font-family: sans-serif;
           background-image: linear-gradient(to right, rgb(0, 153, 255) , rgb(255, 94, 0));
