--- a/_page_03.scss
+++ b/_page_03.scss
@@ -2,7 +2,7 @@
 .page_03{
     background-color: #555F64;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     margin: 0;
     padding: 0;
     .heading{
