--- a/_page_05.scss
+++ b/_page_05.scss
@@ -1,7 +1,6 @@
 .page_05{
-    font-family: sans-serif;
+    font-family:Bebas Neue,sans-serif;
     background-color:#EBF0F0;
-    height: 100vh;
     width: 100%;
     .header{
        width: 100%;
