--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 .page_01 {
   width: 100%;
-  height: 100%;
   background-color: #1D1B1C;
 }
 .page_01 .header {
@@ -102,18 +101,19 @@
   width: 50%;
   position: relative;
   left: 18%;
-  bottom: 60%;
+  bottom: 200px;
   color: white;
   font-family: sans-serif;
   font-size: 20px;
 }
 .page_01 .footer .footer_02 {
+  font-family: Bebas Neue;
   height: 100%;
   width: 50%;
   color: white;
   position: relative;
-  left: 10%;
-  bottom: 50%;
+  left: 20%;
+  bottom: 200px;
 }
 .page_01 .footer .footer_02 .footer__02__01 {
   font-family: sans-serif;
@@ -146,17 +146,10 @@
   background-color: white;
 }
 
-.page_02 {
-  width: 100%;
-  height: 100vh;
-  background-color: #EBF0F0;
-  opacity: 0.9;
-}
-
 .page_03 {
   background-color: #555F64;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   margin: 0;
   padding: 0;
 }
@@ -228,7 +221,6 @@
 .page_04 {
   font-family: sans-serif;
   width: 100%;
-  height: 100vh;
   padding: 0;
   margin: 0;
   overflow: hidden;
@@ -311,9 +303,8 @@
 }
 
 .page_05 {
-  font-family: sans-serif;
+  font-family: Bebas Neue, sans-serif;
   background-color: #EBF0F0;
-  height: 100vh;
   width: 100%;
 }
 .page_05 .header {
@@ -442,7 +433,6 @@
 
 .page_07 {
   width: 100%;
-  height: 107%;
   margin: 0;
   padding: 0;
   overflow: hidden;
